[project]
name = "comfyui_vace_preprocessors"
description = "Some nodes to create a preprocessed videos"
version = "1.0.3"
license = {file = "LICENSE"}
dependencies = ["easydict", "groundingdino-py", "sam2", "decord"]

[project.urls]
Repository = "https://github.com/SamTyurenkov/comfyui-vace-preprocessors"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "samtyurenkov"
DisplayName = "comfyui_vace_preprocessors"
Icon = ""
